# shallowwater

./: .gitignore  CMakeLists.txt  DoubleData2d.cpp  DoubleData2d.hpp  DoubleDeriv.cpp  DoubleDeriv.hpp  ElementData.cpp  ElementData.hpp  GosA.cpp  GosA.hpp  IIteration.hpp  PGMWriter.cpp  PGMWriter.hpp  README.md  ShallowWaterData.cpp  ShallowWaterData.hpp  SogA.cpp  SogA.hpp  hello.cpp  main.cpp
test/: TestDD2d.cpp  TestDoubleDeriv.cpp  TestPGMWriter.cpp  TestSogA.cpp
